--- a/CSS/Cart.css
+++ b/CSS/Cart.css
@@ -1,38 +1,24 @@
-.ff {
-	font-family: 'Nunito';
-}
-
-.section-title{
+.cart-title{
     background-color: #79a32e;
-	margin-left: 15px;
-	margin-right: 15px;
-    border-radius: 5px;
-    text-align: center;
+    border-top-left-radius: 10px;
 }
-.section-title h3{
+.table-giohang tr{
+    height: 40px;
+    
+}
+.table-giohang tr th{
     color: #fff;
-    line-height: 39px;
+    border: 2px solid #fff;
     font-size: 18px;
-    display: inline-block;
-    margin: 0;
-    font-weight: 500;
-    text-align: center;
-    padding-left: 3px;
-}
-.line-page{
-    height: 2px;
-    color: #79a32e;
-}
+    line-height: 30px;
 
-tbody {
-	background-color: #f5f5f5;
 }
-
-.header-table{
-    background-color: #79a32e;
+.table-money{
+    border: 2px solid #79a32e;
 }
-
-.img-cart{
+.cart-img img{
     width: 100%;
-    border-radius: 15px;
+}
+.cart-product-name{
+    width: 60%;
 }
