--- a/CSS/Category.css
+++ b/CSS/Category.css
@@ -9,21 +9,26 @@ body{
 }
 
 .filter{
-    background: #fff;
+    
     border-radius: 5px;
 }
 select{
     padding-top: 5px;
 }
-.section-title{
+.line{
+    background-color: #79a32e;
+    width: 100%;
+    height: 2px;;
+}
+.section-title-category{
     background-color: #79a32e;
     height: 39px;
-    width: 100px;
+    width: 220px;
 	border-radius: 5px;
 	margin-bottom: 15px;
 	margin-top: 15px;
 }
-.section-title h3{
+.section-title-category h3{
     color: #fff;
     line-height: 39px;
     font-size: 18px;
@@ -34,7 +39,7 @@ select{
     padding-left: 14px;
 }
 .filter-content {
-	background-color: #fff;
+	background-color: #f5f5f5;
     padding: 20px;
     border-radius: 15px;
 }
@@ -62,9 +67,40 @@ select{
     -webkit-box-orient: vertical;
     overflow: hidden;
     display: block;
-    display: -webkit-bo
+    
 }
 .product-price{
     color: #79a32e;
     font-weight: bold
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 80%;
+    width: 80%;
+    opacity: 0;
+    transition: .3s ease;
+    
+  }
+  
+  .container:hover .overlay {
+    opacity: 1;
+  }
+  
+  .icon {
+    color: white;
+    font-size: 100px;
+    position: absolute;
+    top: 100%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .fa-user:hover {
+    color: #eee;
+  }
